<resources>
    <string name="app_name">Login Screen</string>
    <string name="falsche_antwort">\"Falsche Antwort 1\"</string>
    <string name="falsche_antwort3">\"Falsche Antwort 3\"</string>
    <string name="falsche_antwort2">\"Falsche Antwort 2\"</string>
    <string name="richtige_antwort">\"Richtige Antwort \"</string>
    <string name="frage">\"Frage\"</string>
    <string name="BelohnungQuizklein">Richtig! Du erhältst 50 Riddlecoins</string>
    <string name="FalschQuizklein">falscheAntwort</string>
</resources>
